--- a/index.html
+++ b/index.html
@@ -242,14 +242,14 @@ Image inpainting is the task of filling in missing or masked region of an image 
 	<br>
 
 	
-<!--	<hr>-->
-<!--	<center><h1>Demo vedio</h1></center>-->
-<!--	<p align="center">-->
-<!--		<iframe width="660" height="395" src="https://youtu.be/nNEc94hgjtk" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>-->
-<!--		<br> -->
-<!--		<span style="font-size:18px"><a href="https://www.bilibili.com/video/BV14V4y1s7rz?share_source=copy_web&vd_source=6fb8e0068d30286602ee8ea389f82ce4">BiliBIli channel</a></span>-->
-<!--		-->
-<!--	</p>-->
+	<hr>
+	<center><h1>Demo vedio</h1></center>
+	<p align="center">
+		<iframe width="660" height="395" src="https://www.youtube.com/embed/czB3VAwhB0o?si=mcNZYT_lmBJPR9m5" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen align="center"></iframe>
+		<br>
+		<span style="font-size:18px"><a href="//player.bilibili.com/player.html?aid=358757940&bvid=BV13X4y1n7T8&cid=1206882830&p=1">BiliBIli channel</a></span>
+
+	</p>
 	<!--
 	<table align=center width=800px>
 		<br>
